# el-supervisor

./: .gitignore  GEMINI.md  README.md  bot.py  config.example.toml  config.toml  pyproject.toml
src/: bb.py  map.py
